--- a/static/addsearch_style.css
+++ b/static/addsearch_style.css
@@ -110,7 +110,6 @@
     position: absolute;
     top: 325px;
     left: 8px;
-    overflow-y: scroll;
     display: flex;
     height: 40px;
     align-items: center;
@@ -130,7 +129,6 @@
     position: absolute;
     top: 385px;
     left: 8px;
-    overflow-y: scroll;
     display: flex;
     height: 40px;
     align-items: center;
@@ -630,639 +628,12 @@
     overflow: hidden;
     border: 1px solid;
   }
-  .home-page-add-items {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    background-color: #ffffff;
-    width: 100%;
-    min-width: 1426px;
-    min-height: 2231px;
-  }
   
-  .home-page-add-items .sidebar {
-    position: relative;
-    width: 256px;
-    height: 2231px;
-    background-color: #ffffff;
-    border-right: 1px solid #dfdfdf;
-  }
-  
-  .home-page-add-items .list {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    align-items: flex-start;
-    gap: 4px;
-    position: absolute;
-    top: 84px;
-    left: 8px;
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .home-page-add-items .menu-item {
-    display: flex;
-    height: 40px;
-    align-items: center;
-    gap: 16px;
-    padding: 0px 16px;
-    position: relative;
-    align-self: stretch;
-    width: 100%;
-    background-color: #ffffff;
-    border-radius: 8px;
-  }
-  
-  .home-page-add-items .logo-placeholder {
-    position: relative;
+  .menu-icon {
     width: 24px;
     height: 24px;
-    background-color: #d9d9d9;
-    border-radius: 12px;
-  }
-  
-  .home-page-add-items .text-wrapper {
-    position: relative;
-    flex: 1;
-    font-family: var(--small-text-font-family);
-    font-weight: var(--small-text-font-weight);
-    color: #000000;
-    font-size: var(--small-text-font-size);
-    letter-spacing: var(--small-text-letter-spacing);
-    line-height: var(--small-text-line-height);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    font-style: var(--small-text-font-style);
-    text-decoration: none;
-  }
-  
-  .home-page-add-items .div {
-    position: relative;
-    align-self: stretch;
-    width: 100%;
-    box-shadow: 0px 4px 4px #00000040;
-    display: flex;
-    height: 40px;
-    align-items: center;
-    gap: 16px;
-    padding: 0px 16px;
-    background-color: #ffffff;
-    border-radius: 8px;
-  }
-  
-  .home-page-add-items .logo-placeholder-2 {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    top: 30px;
-    left: 154px;
-    background-color: #d9d9d9;
-    border-radius: 12px;
-  }
-  
-  .home-page-add-items .title {
-    position: absolute;
-    height: 36px;
-    top: 23px;
-    left: 24px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 24px;
-    letter-spacing: -0.24px;
-    line-height: 36px;
-    white-space: nowrap;
-  }
-  
-  .home-page-add-items .menu-item-2 {
-    width: 240px;
-    position: absolute;
-    top: 325px;
-    left: 8px;
-    overflow-y: scroll;
-    display: flex;
-    height: 40px;
-    align-items: center;
-    gap: 16px;
-    padding: 0px 16px;
-    background-color: #ffffff;
-    border-radius: 8px;
-  }
-  
-  .home-page-add-items .menu-item-2::-webkit-scrollbar {
-    width: 0;
-    display: none;
-  }
-  
-  .home-page-add-items .menu-item-3 {
-    width: 240px;
-    position: absolute;
-    top: 385px;
-    left: 8px;
-    overflow-y: scroll;
-    display: flex;
-    height: 40px;
-    align-items: center;
-    gap: 16px;
-    padding: 0px 16px;
-    background-color: #ffffff;
-    border-radius: 8px;
-  }
-  
-  .home-page-add-items .menu-item-3::-webkit-scrollbar {
-    width: 0;
-    display: none;
-  }
-  
-  .home-page-add-items .header {
-    position: relative;
-    width: 1170px;
-    height: 128px;
-    background-color: transparent;
-  }
-  
-  .home-page-add-items .filter {
-    display: inline-flex;
-    height: 40px;
-    align-items: center;
-    gap: 12px;
-    padding: 8px 16px 8px 12px;
-    position: absolute;
-    top: 70px;
-    left: 485px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    border: 1px solid #dfdfdf;
-    cursor: pointer;
-  }
-  
-  .home-page-add-items .img {
-    position: relative;
-    width: 24px;
-    height: 24px;
-  }
-  
-  .home-page-add-items .label {
-    width: fit-content;
-    white-space: nowrap;
-    position: relative;
-    margin-top: -1.00px;
-    font-family: var(--presets-body2-font-family);
-    font-weight: var(--presets-body2-font-weight);
-    color: #828282;
-    font-size: var(--presets-body2-font-size);
-    letter-spacing: var(--presets-body2-letter-spacing);
-    line-height: var(--presets-body2-line-height);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    font-style: var(--presets-body2-font-style);
-  }
-  
-  .home-page-add-items .search {
-    display: flex;
-    width: 405px;
-    height: 40px;
-    align-items: center;
-    gap: 12px;
-    padding: 8px 16px 8px 12px;
-    position: absolute;
-    top: 70px;
-    left: 64px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    border: 1px solid #dfdfdf;
-  }
-  
-  .home-page-add-items .input {
-    flex: 1;
-    position: relative;
-    margin-top: -1.00px;
-    font-family: var(--presets-body2-font-family);
-    font-weight: var(--presets-body2-font-weight);
-    color: #828282;
-    font-size: var(--presets-body2-font-size);
-    letter-spacing: var(--presets-body2-letter-spacing);
-    line-height: var(--presets-body2-line-height);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    font-style: var(--presets-body2-font-style);
-    background: transparent;
-    border: none;
-    padding: 0;
-  }
-  
-  .home-page-add-items .text-wrapper-2 {
-    position: absolute;
-    height: 48px;
-    top: 14px;
-    left: 64px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 32px;
-    letter-spacing: -0.32px;
-    line-height: 48px;
-    white-space: nowrap;
-  }
-  
-  .home-page-add-items .line {
-    position: absolute;
-    width: 1169px;
-    height: 1px;
-    top: 133px;
-    left: 1px;
-    object-fit: cover;
-  }
-  
-  .home-page-add-items .text-wrapper-3 {
-    height: 36px;
-    top: 166px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 24px;
-    letter-spacing: -0.24px;
-    line-height: 36px;
-    white-space: nowrap;
-    position: absolute;
-    left: 320px;
-  }
-  
-  .home-page-add-items .input-field {
-    display: flex;
-    flex-direction: column;
-    width: 720px;
-    align-items: flex-start;
-    gap: var(--size-space-200);
-    position: absolute;
-    top: 203px;
-    left: 320px;
-  }
-  
-  .home-page-add-items .p {
-    position: relative;
-    align-self: stretch;
-    margin-top: -1.00px;
-    font-family: var(--body-base-font-family);
-    font-weight: var(--body-base-font-weight);
-    color: var(--color-text-default-default);
-    font-size: var(--body-base-font-size);
-    letter-spacing: var(--body-base-letter-spacing);
-    line-height: var(--body-base-line-height);
-    font-style: var(--body-base-font-style);
-  }
-  
-  .home-page-add-items .div-wrapper {
-    display: flex;
-    min-width: 240px;
-    align-items: center;
-    padding: var(--size-space-300) var(--size-space-400);
-    position: relative;
-    align-self: stretch;
-    width: 100%;
-    flex: 0 0 auto;
-    margin-bottom: -1.00px;
-    margin-left: -1.00px;
-    margin-right: -1.00px;
-    background-color: var(--color-background-default-default);
-    border-radius: var(--size-radius-200);
-    overflow: hidden;
-    border: 1px solid var(--color-border-default-default);
-  }
-  
-  .home-page-add-items .text-wrapper-4 {
-    position: relative;
-    flex: 1;
-    margin-top: -0.50px;
-    font-family: var(--single-line-body-base-font-family);
-    font-weight: var(--single-line-body-base-font-weight);
-    color: var(--color-text-default-default);
-    font-size: var(--single-line-body-base-font-size);
-    letter-spacing: var(--single-line-body-base-letter-spacing);
-    line-height: var(--single-line-body-base-line-height);
-    font-style: var(--single-line-body-base-font-style);
-  }
-  
-  .home-page-add-items .text-wrapper-5 {
-    position: absolute;
-    height: 36px;
-    top: 317px;
-    left: 320px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 24px;
-    letter-spacing: -0.24px;
-    line-height: 36px;
-    white-space: nowrap;
-  }
-  
-  .home-page-add-items .select-field {
-    display: flex;
-    flex-direction: column;
-    width: 714px;
-    align-items: flex-start;
-    gap: var(--size-space-200);
-    top: 354px;
-    position: absolute;
-    left: 320px;
-  }
-  
-  .home-page-add-items .select {
-    display: flex;
-    min-width: 240px;
-    height: 42px;
-    align-items: center;
-    gap: var(--size-space-200);
-    padding: var(--size-space-300) var(--size-space-300) var(--size-space-300)
-      var(--size-space-400);
-    position: relative;
-    align-self: stretch;
-    width: 100%;
-    margin-bottom: -1.00px;
-    margin-left: -1.00px;
-    margin-right: -1.00px;
-    background-color: var(--color-background-default-default);
-    border-radius: var(--size-radius-200);
-    border: 1px solid var(--color-border-default-default);
-  }
-  
-  .home-page-add-items .chevron-down {
-    position: relative;
-    width: 16px;
-    height: 16px;
-  }
-  
-  .home-page-add-items .button {
-    all: unset;
-    box-sizing: border-box;
-    width: 114px;
-    top: 457px;
-    left: 320px;
-    background-color: var(--color-background-brand-default);
-    border-color: var(--color-border-brand-default);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: var(--size-space-200);
-    padding: var(--size-space-300);
-    position: absolute;
-    border-radius: var(--size-radius-200);
-    overflow: hidden;
-    border: 1px solid;
-    cursor: pointer;
-  }
-  
-  .home-page-add-items .button-2 {
-    all: unset;
-    box-sizing: border-box;
-    position: relative;
-    width: fit-content;
-    margin-top: -1.00px;
-    font-family: var(--single-line-body-base-font-family);
-    font-weight: var(--single-line-body-base-font-weight);
-    color: var(--color-text-brand-on-brand);
-    font-size: var(--single-line-body-base-font-size);
-    letter-spacing: var(--single-line-body-base-letter-spacing);
-    line-height: var(--single-line-body-base-line-height);
-    white-space: nowrap;
-    font-style: var(--single-line-body-base-font-style);
-  }
-  
-  .home-page-add-items .text-wrapper-6 {
-    position: absolute;
-    height: 48px;
-    top: 596px;
-    left: 320px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 32px;
-    letter-spacing: -0.32px;
-    line-height: 48px;
-    white-space: nowrap;
-  }
-  
-  .home-page-add-items .chevron-down-2 {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 244px;
-    left: 1008px;
-  }
-  
-  .home-page-add-items .line-2 {
-    position: absolute;
-    width: 1169px;
-    height: 1px;
-    top: 540px;
-    left: 256px;
-    object-fit: cover;
-  }
-  
-  .home-page-add-items .panel-image-content {
-    display: flex;
-    width: 1165px;
-    align-items: center;
-    gap: var(--size-space-1200);
-    padding: var(--size-space-1600);
-    position: absolute;
-    top: 645px;
-    left: 258px;
-    background-color: var(--color-background-default-default);
-    opacity: 0.8;
-  }
-  
-  .home-page-add-items .image {
-    position: relative;
-    width: 484px;
-    height: 350px;
-    background: linear-gradient(
-      0deg,
-      rgba(227, 227, 227, 1) 0%,
-      rgba(227, 227, 227, 1) 100%
-    );
-    object-fit: cover;
-  }
-  
-  .home-page-add-items .text-content-flow {
-    width: 484px;
-    height: 351px;
-    gap: var(--size-space-600);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-  }
-  
-  .home-page-add-items .text-content-heading {
-    gap: var(--size-space-200);
-    align-self: stretch;
-    width: 100%;
-    flex: 0 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-  }
-  
-  .home-page-add-items .text-wrapper-7 {
-    position: relative;
-    align-self: stretch;
-    margin-top: -1.00px;
-    font-family: var(--heading-font-family);
-    font-weight: var(--heading-font-weight);
-    color: var(--color-text-default-default);
-    font-size: var(--heading-font-size);
-    letter-spacing: var(--heading-letter-spacing);
-    line-height: var(--heading-line-height);
-    font-style: var(--heading-font-style);
-  }
-  
-  .home-page-add-items .text-wrapper-8 {
-    position: relative;
-    align-self: stretch;
-    font-family: var(--subheading-font-family);
-    font-weight: var(--subheading-font-weight);
-    color: var(--color-text-default-secondary);
-    font-size: var(--subheading-font-size);
-    letter-spacing: var(--subheading-letter-spacing);
-    line-height: var(--subheading-line-height);
-    font-style: var(--subheading-font-style);
-  }
-  
-  .home-page-add-items .text {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    align-self: stretch;
-    width: 100%;
-    flex: 0 0 auto;
-  }
-  
-  .home-page-add-items .text-2 {
-    position: relative;
-    flex: 1;
-    margin-top: -1.00px;
-    font-family: var(--body-base-font-family);
-    font-weight: var(--body-base-font-weight);
-    color: var(--color-text-default-default);
-    font-size: var(--body-base-font-size);
-    letter-spacing: var(--body-base-letter-spacing);
-    line-height: var(--body-base-line-height);
-    font-style: var(--body-base-font-style);
-  }
-  
-  .home-page-add-items .panel-image-content-2 {
-    top: 1124px;
-    left: 258px;
-    display: flex;
-    width: 1165px;
-    align-items: center;
-    gap: var(--size-space-1200);
-    padding: var(--size-space-1600);
-    position: absolute;
-    background-color: var(--color-background-default-default);
-    opacity: 0.8;
-  }
-  
-  .home-page-add-items .text-wrapper-9 {
-    position: relative;
-    align-self: stretch;
-    margin-top: -1.00px;
-    font-family: "Inter-SemiBold", Helvetica;
-    font-weight: 600;
-    color: var(--color-text-default-default);
-    font-size: 24px;
-    letter-spacing: -0.48px;
-    line-height: 28.8px;
-  }
-  
-  .home-page-add-items .text-wrapper-10 {
-    position: relative;
-    align-self: stretch;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 400;
-    color: var(--color-text-default-secondary);
-    font-size: 20px;
-    letter-spacing: 0;
-    line-height: 24.0px;
-  }
-  
-  .home-page-add-items .text-3 {
-    position: relative;
-    flex: 1;
-    margin-top: -1.00px;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 400;
-    color: var(--color-text-default-default);
-    font-size: 16px;
-    letter-spacing: 0;
-    line-height: 22.4px;
-  }
-  
-  .home-page-add-items .panel-image-content-3 {
-    top: 1603px;
-    left: 249px;
-    display: flex;
-    width: 1165px;
-    align-items: center;
-    gap: var(--size-space-1200);
-    padding: var(--size-space-1600);
-    position: absolute;
-    background-color: var(--color-background-default-default);
-    opacity: 0.8;
-  }
-  
-  .home-page-add-items .button-3 {
-    all: unset;
-    box-sizing: border-box;
-    width: 145px;
-    top: 1549px;
-    left: 508px;
-    background-color: var(--color-background-brand-default);
-    border-color: var(--color-border-brand-default);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: var(--size-space-200);
-    padding: var(--size-space-300);
-    position: absolute;
-    border-radius: var(--size-radius-200);
-    overflow: hidden;
-    border: 1px solid;
-    cursor: pointer;
-  }
-  
-  .home-page-add-items .button-4 {
-    all: unset;
-    box-sizing: border-box;
-    width: 145px;
-    top: 2028px;
-    left: 508px;
-    background-color: var(--color-background-neutral-secondary-hover);
-    border-color: var(--color-border-default-secondary);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: var(--size-space-200);
-    padding: var(--size-space-300);
-    position: absolute;
-    border-radius: var(--size-radius-200);
-    overflow: hidden;
-    border: 1px solid;
-    cursor: not-allowed;
-    opacity: 0.7;
+    margin-right: 12px;
+    flex-shrink: 0;
   }
   
   .visually-hidden {
